# production-django-docker-example

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: app.yaml  backend.yaml  ci.yaml  docker.yaml  docker.yaml.example  release.yaml
asdas/: manage.py
asdas/asdas/: asgi.py  settings.py  urls.py  wsgi.py
core/: __init__.py  asgi.py  urls.py  wsgi.py
core/celery/: celery.py  celery_config.py  celery_enums.py
core/settings/: common.py  dev.py  prod.py  version.py
core/utils/: base_logger.py  base_pagination.py  base_router.py  base_simple_router.py  logger.py  pagination.py  urls.py
scripts/: init_project.sh  start_app.sh  start_celery.sh
user/: models.py  serializers.py  tasks.py  urls.py  views.py
user/functions/: validate_user_password.py
user/migrations/: 0001_initial.py  0002_remove_user_username.py
user/orm/: get_users.py
user/tests/: test_user.py
