[project]
name = "app"
version = "1.3.0"
description = ""
requires-python = "==3.13.*"
dependencies = [
    "air-drf-relation>=0.6.1",
    "celery>=5.5.2",
    "django>=5.2.1",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.2.9",
    "redis>=6.2.0",
    "requests>=2.32.3",
    "sentry-sdk>=2.29.1",
    "django-extensions>=4.1",
]

[dependency-groups]
dev = ["coverage>=7.8.2", "pre-commit>=4.2.0", "ruff>=0.11.11"]

[tool.pyupgrade]
py313-plus = true

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.extend-per-file-ignores]
"core/settings/*.py" = ["F405", "F403"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
skips = ["B101"]

[tool.coverage.report]
fail_under = 60
skip_empty = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == '__main__':",
    "if settings.DEBUG",
]
omit = ["*/migrations/*", "*/tests/*", "core/*", 'manage.py']
