[project]
name = "production-django-docker-example"
version = "1.5.4"
description = ""
requires-python = "==3.13.*"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
    "air-drf-relation>=0.6.1",
    "celery>=5.5.3",
    "django>=5.2.2",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt==5.4.0", # ERROR v5.5.0 type object 'OutstandingToken' has no attribute 'objects' on refresh token
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.2.9",
    "redis>=6.2.0",
    "requests>=2.32.3",
    "sentry-sdk>=2.29.1",
]

[dependency-groups]
dev = [
    "coverage>=7.8.2",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]

[tool.ruff]
target-version = "py313"

line-length = 120
indent-width = 4
fix = true
format.quote-style = "single"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
lint.extend-select = [ "I" ]
lint.extend-per-file-ignores."core/settings/*.py" = [ "F403", "F405" ]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.coverage.run]
source = [ "." ]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "manage.py",
    "*/settings/*",
    "*/node_modules/*",
]

[tool.coverage.report]
fail_under = 50
skip_empty = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.pyupgrade]
py313-plus = true

[tool.bandit]
skips = [ "B101" ]
exclude_dirs = [
    "tests",
    "*/tests/*",
    "*/migrations/*",
]
